--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-5">
-	<title>
-		beautiful and simple website using html only -- fullywrold web tutorials
-	</title>
+	<title style="font-family:verdana">beautiful and simple website using html only -- fullywrold web tutorials.</title>
+
 </head>
-<body background=link="#000" alink="#017bf5" vlink="#000">
+<body background=link="" alink="#017bf5" vlink="#000">
 	<br />
 	<h3 align="center">
 		<font face="Lato" size="6">LOGO</font>
