--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<title>
 	<title style="font-family:verdana">beautiful and simple website using html only -- fullywrold web tutorials.</title>
+	</title>
 
 </head>
 <body background=link="" alink="#017bf5" vlink="#000">
