--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="font-family:verdana">
 	<title>
 	<title style="font-family:verdana">beautiful and simple website using html only -- fullywrold web tutorials.</title>
 	</title>
