--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html lang="en">
 <head>
-	<meta charset="font-family:verdana">
+	<meta charset="verdana-8">
 	<title>
-	<title style="font-family:verdana">beautiful and simple website using html only -- fullywrold web tutorials.</title>
+		beautiful and simple website using html only -- fullywrold web tutorials
 	</title>
-
 </head>
-<body background=link="" alink="#017bf5" vlink="#000">
+<body background="1.jpg" link="#000" alink="#017bf5" vlink="#000">
 	<br />
 	<h3 align="center">
 		<font face="Lato" size="6">LOGO</font>
@@ -30,7 +29,7 @@
 	</h1>
 	<h3 align="center">
 		<font face="Lato" color="#000" size="5">
-			U
+			USING HTML ONLY (NO CSS USED)
 		</font>
 	</h3>
 	<br />
