--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html lang="en">
 <head>
-	<meta charset="verdana-8">
-	<title>
-		beautiful and simple website using html only -- fullywrold web tutorials
-	</title>
+	<meta charset="utf-8">
 </head>
 <body background="1.jpg" link="#000" alink="#017bf5" vlink="#000">
 	<br />
