--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	</h3>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	<h1 align="center">
-		<font face="Lato" color="#017bf5" size="7">
-			BEAUTIFUL AND SIMPLE WEB PAGE
+		<font face="font-family:verdana" color="#017bf5" size="7">
+			Muhammad Umer Khan
 		</font>
 	</h1>
 	<h3 align="center">
