--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body background="1.jpg" link="#000" alink="#017bf5" vlink="#000">
 	<br />
 	<h3 align="center">
-		<font face="Lato" size="6">LOGO</font>
+		<font face="Lato" size="6">My Profile</font>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -26,17 +26,11 @@
 	</h1>
 	<h3 align="center">
 		<font face="Lato" color="#000" size="5">
-			USING HTML ONLY (NO CSS USED)
+			My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.
+			I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.
+
 		</font>
 	</h3>
 	<br />
-	<h3 align="center">
-	<a href="#">
-		<font face="Lato" color="#000">GET STARTED</font>
-	</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="#">
-		<font face="Lato" color="#fff">SUBSCRIBE US</font>
-	</a>
-	</h3>
 </body>
 </html>
