--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 	</h3>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	<h1 align="center">
-		<font face="font-family:verdana" color="#017bf5" size="7">
+		<font face="verdana" color="#017bf5" size="7">
 			Muhammad Umer Khan
 		</font>
 	</h1>
 	<h3 align="center">
 		<font face="Lato" color="#000" size="5">
 			My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.
+			&nbsp;
 			I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.
 
 		</font>
