--- a/index.html
+++ b/index.html
@@ -1,37 +1,89 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="utf-8">
+	<title>Page Layout</title>
+	<style>
+		.head1 {
+			font-size:40px;
+			color:#009900;
+			font-weight:bold;
+		}
+		.head2 {
+			font-size:17px;
+			margin-left:10px;
+			margin-bottom:15px;
+		}
+		body {
+			margin: 0 auto;
+			background-position:center;
+			background-size: contain;
+		}
+	
+		.menu {
+			position: sticky;
+			top: 0;
+			background-color: #009900;
+			padding:10px 0px 10px 0px;
+			color:white;
+			margin: 0 auto;
+			overflow: hidden;
+		}
+		.menu a {
+			float: left;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+			font-size: 20px;
+		}
+		.menu-log {
+			right: auto;
+			float: right;
+		}
+		footer {
+			width: 100%;
+			bottom: 0px;
+			background-color: #000;
+			color: #fff;
+			position: absolute;
+			padding-top:20px;
+			padding-bottom:50px;
+			text-align:center;
+			font-size:30px;
+			font-weight:bold;
+		}
+		.body_sec {
+			margin-left:20px;
+		}
+	</style>
 </head>
-<body background="1.jpg" link="#000" alink="#017bf5" vlink="#000">
-	<br />
-	<h3 align="center">
-		<font face="Lato" size="6">My Profile</font>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<font face="cinzel" size="4">
-			<a href="#">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">VIDEOS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">CONTACT US</a>
-		</font>
-	</h3>
-	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-	<h1 align="center">
-		<font face="verdana" color="#017bf5" size="7">
-			Muhammad Umer Khan
-		</font>
-	</h1>
-	<h3 align="center">
-		<font face="Lato" color="#000" size="5">
-			My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.
-			&nbsp;
-			I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.
 
-		</font>
-	</h3>
-	<br />
+<body>
+	
+	<!-- Header Section -->
+	<header>
+		<div class="head1">GeeksforGeeks</div>
+		<div class="head2">A computer science portal for geeks</div>
+	</header>
+	
+	<!-- Menu Navigation Bar -->
+	<div class="menu">
+		<a href="#home">HOME</a>
+		<a href="#news">NEWS</a>
+		<a href="#notification">NOTIFICATIONS</a>
+		<div class="menu-log">
+			<a href="#login">LOGIN</a>
+		</div>
+	</div>
+	
+	<!-- Body section -->
+	<div class = "body_sec">
+		<section id="Content">
+			<h3>Content section</h3>
+		</section>
+	</div>
+	
+	<!-- Footer Section -->
+	<footer>Footer Section</footer>
 </body>
-</html>
+</html>					
