--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <header>
-        <div class="logo>
-                    <img src=img.png" width="200" alt="" title="">
-        </div>
+        <title>My Profile</title>
+        
+        nav
         
 </body>
 </html>
