--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <header>
-        <title>My Profile</title>
-        
-        nav
+        <title>
+            "MY PROFILE"
+        </title>
         
 </body>
 </html>
