--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-<meta charset="utf-8">
-</head>
 <body>
     <header>
-        <title>
-            "MY PROFILE"
-        </title>
+        <div class="logo>
+                    <img src=img.png" width="200" alt="" title="">
+        </div>
         
+        <nav>
+            <li>Personal Information</li>
+            <li>Interest in IT</li>
+            <li>Ideal Job</li>
+            <li>Personal Profile</li>
+            <li>Project Idea</li>
+        </nav>
+    </header>                         
 </body>
 </html>
