--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <body>
     <header>
-        <div class="logo>
-                    <img src=img.png" width="200" alt="" title="">
+        <div class="logo"
+                    <<img width="206" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">>
         </div>
         
         <nav>
