--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <header>
         <div class="logo"
-                    <<img width="206" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">>
+                    <img width="206" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
         </div>
         
         <nav>
