--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <body>
     <header>
+        <div class="container">
         <img width="206" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
         
         <nav>
@@ -11,6 +12,7 @@
             <li>Personal Profile</li>
             <li>Project Idea</li>
         </nav>
+        </div>
     </header>                         
 </body>
 </html>
