--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+<html>
 <head>
+<Meta charset="UTF-8">
+<title>website</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
 <body>
     <header>
         <div class="container">
-        <img width="206" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
-        
+        <div class="image">
+        <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
+        </div>
+            
         <nav>
             <li>Personal Information</li>
             <li>Interest in IT</li>
