--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <Meta charset="UTF-8">
 <title>website</title>
 <link rel="stylesheet" href="style.css">
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,700'>
 </head>
 
 <body>
