--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-        <div class="img">
+        <div class="logo">
         <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
         </div>
             
