--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
             
         <ul>
-            <li>Personal Information</li>
-            <li>Interest in IT</li>
-            <li>Ideal Job</li>
-            <li>Personal Profile</li>
-            <li>Project Idea</li>
+            <li><a href="#">Personal Information</a></li>
+            <li><a href="#">Interest in IT</a></li>
+            <li><a href="#">Ideal Job</a></li>
+            <li><a href="#">Personal Profile</a></li>
+            <li><a href="#">Project Idea</a></li>
         </ul>
         </div>
     </header>
@@ -28,6 +28,7 @@
         <div class="content">
             <h2>Personal Information</h2>
             <article>My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.</article>
+            
             <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
 
 </body>
