--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <Meta charset="UTF-8">
-<title>website</title>
+<title>My Profile</title>
 <link rel="stylesheet" href="style.css">
 <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,700'>
 </head>
@@ -13,15 +13,13 @@
         <div class="logo">
         <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
         </div>
-        <nav>
-            <ul>
+        <ul>
                 <li><a href="#">Personal Information</a></li>
                 <li><a href="#">Interest in IT</a></li>
                 <li><a href="#">Ideal Job</a></li>
                 <li><a href="#">Personal Profile</a></li>
                 <li><a href="#">Project Idea</a></li>
-            </ul>
-        </nav>
+        </ul>
         </div>
     </header>
     
