--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <div class="logo">
         <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
         </div>
-        <ul>
+        <nav>
+            <ul>
                 <li><a href="#">Personal Information</a></li>
                 <li><a href="#">Interest in IT</a></li>
                 <li><a href="#">Ideal Job</a></li>
                 <li><a href="#">Personal Profile</a></li>
                 <li><a href="#">Project Idea</a></li>
-        </ul>
+            </ul>
+        </nav>
         </div>
     </header>
     
