--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Personal Information</a></li>
-                <li><a href="#">Interest in IT</a></li>
-                <li><a href="#">Ideal Job</a></li>
-                <li><a href="#">Personal Profile</a></li>
-                <li><a href="#">Project Idea</a></li>
+                <li><a href="index.html">Personal Information</a></li>
+                <li><a href="interest.html">Interest in IT</a></li>
+                <li><a href="job.html">Ideal Job</a></li>
+                <li><a href="personal.html">Personal Profile</a></li>
+                <li><a href="project.html">Project Idea</a></li>
             </ul>
         </nav>
         </div>
