--- a/job.html
+++ b/job.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+<Meta charset="UTF-8">
+<title>My Profile</title>
+<link rel="stylesheet" href="style.css">
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,700'>
+</head>
 
+<body>
+    <header>
+        <div class="container">
+        <div class="logo">
+        <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Personal Information</a></li>
+                <li><a href="interest.html">Interest in IT</a></li>
+                <li><a href="job.html">Ideal Job</a></li>
+                <li><a href="personal.html">Personal Profile</a></li>
+                <li><a href="project.html">Project Idea</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    
+    <div class="container">
+        <div class="content">
+            <h2>Personal Information</h2>
+            <article>My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.</article>
+            
+            <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
+
+</body>
+</html>
