--- a/job.html
+++ b/job.html
@@ -27,9 +27,11 @@
     
     <div class="container">
         <div class="content">
-            <h2>Personal Information</h2>
-            <article>My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.</article>
-            
+            <h2>Ideal Job</h2>
+            <article>The position of this job seems to start of as junior but later working there can lead me to get a promotion or a higher rank. This allows for people to be able to receive more job satisfaction as they work with others and for others more as higher the level of the job is. This leads to more pay for the job starting from $36,000 to $250,000.</article>
+            <article>The skills and experience that are required for this job are Cisco Technology, Switching, Firewalls, CCNP Certificate, BGP, CNA Certificate, Cisco Routing, Routing Protocols, CCIE Certificate and ITIL Framework. The qualifications that will be required are Bachelor of Computer Science, Bachelor of Information System and Bachelor of Computer Systems Engineering.</article>
+            <article>Looking at all the skills, experience and even qualifications, I do not think I have or will have any by the end of this degree. The qualifications are completely different to what I am doing right now, and it seems like the skills and experience are certificates that I must do somewhere else.</article>
+            <article>It looks like I will try achieving the skills and experience are university ends as this will also take up time to get. As the website seems to say you need “any of these” I will try get certificates that are the main keys to get into the course. The main thing is that since this job has a growth of 26.2% in the next five years then I will be able to specifically pin down the most important certificates after this degree ends. </article>
             <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
 
 </body>
