--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             <article>My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.</article>
             
             <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
-
+    <img class= "face" alt"" src="![me4 263](https://user-images.githubusercontent.com/80433677/112451667-deb00880-8da9-11eb-8f14-b54f41b9f414.jpg)">
 </body>
 </html>
