--- a/interest.html
+++ b/interest.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
         <div class="logo">
-        <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
+        <img width="200" alt="img" src="img.png">
         </div>
         <nav>
             <ul>
