--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
         <div class="logo">
-        <img width="200" alt="img" src="https://user-images.githubusercontent.com/80433677/112409659-02edf400-8d6e-11eb-9cc4-39d9c95e7c61.png">
+        <img width="200" alt="img" src="img.png">
         </div>
         <nav>
             <ul>
@@ -27,7 +27,7 @@
     
     <div class="container">
         <div class="content">
-            <h2>Personal Information</h2>
+            <h2>Project</h2>
             <article>My name is Muhammad Umer Khan, but my family and friends refer to me as Umer. I came from Pakistan with my family, but I was born in Chicago, America. My religion is Muslim and the language I speak in my house is Urdu while I also got taught how to speak English before we moved to Australia. My student number is 3901434 and my email address is s3901434@student.rmit.edu.au. I am studying Bachelor of Information Technology.</article>
             
             <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
