--- a/job.html
+++ b/job.html
@@ -33,6 +33,7 @@
             <article>Looking at all the skills, experience and even qualifications, I do not think I have or will have any by the end of this degree. The qualifications are completely different to what I am doing right now, and it seems like the skills and experience are certificates that I must do somewhere else.</article>
             <article>It looks like I will try achieving the skills and experience are university ends as this will also take up time to get. As the website seems to say you need “any of these” I will try get certificates that are the main keys to get into the course. The main thing is that since this job has a growth of 26.2% in the next five years then I will be able to specifically pin down the most important certificates after this degree ends. </article>
             <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
-
+    <img class= "job" alt"" src=job.png>
+            
 </body>
 </html>
