--- a/index.html
+++ b/index.html
@@ -32,5 +32,24 @@
             
             <article>I like to play video games mainly because I find it satisfying fully completing a game and earning all the trophies. Watching action themed movies and anime are another thing I like to do in my free time. As my hobby I like to draw or sketch characters that I watch from the movies and anime. Something different about me is that I have had a seizure and have had a surgery in 2016, which is why I have a scar on the left side of my head.</article>
     <img class= "face" alt"" src=face.jpg>
+<!--Bibliography:
+how to make a ReadMe file: https://www.youtube.com/watch?v=yXY3f9jw7fg
+How to use CSS postioning to move elements: https://www.youtube.com/watch?v=oRbLowjKVzI
+Layout help: https://www.geeksforgeeks.org/html-layout/
+Making comment: https://www.youtube.com/watch?v=nMPzlUBPn-A
+Create a menu: https://www.youtube.com/watch?v=nMPzlUBPn-A\
+Another layout help: https://www.w3schools.com/html/html_layout.asp
+Another layout help: https://www.tutorialrepublic.com/twitter-bootstrap-tutorial/bootstrap-grid-examples.php
+Font: https://fonts.google.com/specimen/Titillium+Web?preview.text_type=custom#about
+General Font: https://developers.google.com/fonts/docs/getting_started
+Image tutorial: https://www.youtube.com/watch?v=hHbWF1Bvgf4
+Colour: https://www.w3schools.com/colors/colors_picker.asp
+How to edit: https://www.youtube.com/watch?v=PKh-1cUVHcw
+Learning style: http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=7&V=8&T=5
+Job seeker: https://www.seek.com.au/job/51808818?type=standard#searchRequestToken=03671f13-cae2-4a0a-bb9a-c19614d44595
+html images: https://www.w3schools.com/html/html_images.asp
+Tutorial: https://scrimba.com/learn/htmlcss
+Big Five Factors: https://openpsychometrics.org/tests/IPIP-BFFM/results.php?r=2.8,2.5,3.5,3.9,2.7#_IV
+-->
 </body>
 </html>
