--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Job seeker: https://www.seek.com.au/job/51808818?type=standard#searchRequestToke
 html images: https://www.w3schools.com/html/html_images.asp
 Tutorial: https://scrimba.com/learn/htmlcss
 Big Five Factors: https://openpsychometrics.org/tests/IPIP-BFFM/results.php?r=2.8,2.5,3.5,3.9,2.7#_IV
+Padding: https://www.w3schools.com/css/css_padding.asp
 -->
 </body>
 </html>
